--- a/tcc/aplicacao/tcc/website/templates/base.html
+++ b/tcc/aplicacao/tcc/website/templates/base.html
@@ -100,6 +100,9 @@
                         </li>
                     {% endif %}
                     <div class="border-b-1 flex text-center"></div>
+                    <li>
+                        <img src="{% static 'img/logo.png' %}" alt="">
+                    </li>
                 </ul>
             </aside>
             <main class="flex-1 p-6 overflow-y-auto">
